# birdnet-audio-walker

./: .gitignore  LICENSE  README.md  alle_python_files.txt  birdnet_copter_all_sources.txt  full_project_context.md  full_project_context_outdated.md  noch_installieren.md  projectcontent.txt  pyproject.toml  readme_2.md  requirements.txt
.devcontainer/: devcontainer.json
research/: README.md  beekeeperstudio.md  birdnet_agent_concept.md  birdnet_batch_analyzer_concept.md  cluster_analysis_concept.md  doku_updates.txt  full_project_context.md
research/DiskANN-Konzept/: Einarbeiten_in_v2.md  drawio_datenfluss_analyse.drawio  drawio_datenfluss_global.drawio  drawio_datenfluss_lokal.drawio  vector_db_concept_2.md
research/birdnet_docuemntation/: birdnet-advanced-anhang.md  birdnet-api-docs-english.md  birdnet-appendix-english.md  birdnet-full-api-doku_de.md
research/older/: birdnet-context-doc.md  docker_audio_testing.md
scripts/: setup_birdnet.py
source/: alle_python_files.txt  birdnet_analyzer.py  birdnet_labels.py  config.py  database.py  main.py  progress.py  segmentation.py  species_translation.py  test_audio_playback.py  test_birdnet_api.py  wichtig_vector_db_concept.md  worker.py
source/backup/: sharedContent.txt  walkerContent.txt
source/birdnet_copter/: Konzept_der_Zusammenführung.md  app_state.py  bird_language.py  birdnet_analyzer.py  cli_playback.py  config.py  database.py  db_queries.py  filters.py  hardware.py  job_queue.py  keyboard_control.py  konzept_bird_language.md  konzept_import_meta_data.md  konzept_temp_db.md  konzept_zeitraum.md  main.py  player.py  scout_process.py  scout_watchdog.py  status_protokoll.md  task_status.py  temp_db_init.py  temp_db_process.py  utils.py  walker_process.py
source/birdnet_play/: NiceGui-Umbaukonzept.md  __init__.py  __main__.py  cli.py  (+8 more)
tests/: Erste Exploration.ipynb  embedding_analysis.py  test_embedding_consistency.py
(+55 files in other folders)
