[tool.poetry]
name = "birdnet-walker"
version = "0.1.0"
description = "BirdNET CUDA Batch Analyzer and tools - Analyze recordings with BirdNET"
authors = ["Frank Herbrand <herbrand@gmx.de>"]
readme = "README.md"
packages = [
    { include = "birdnet_walker", from = "source"},
    { include = "shared", from = "source" },
    { include = "birdnet_play", from = "source" }
    ]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
loguru = "^0.7.0"
pandas = "^2.0.0"
requests = "^2.32.0"
beautifulsoup4 = "^4.14.0"
birdnet = "^0.2.0"
# Note: We use a docker image what should include most of them.
edge-tts = "^7.2.0"
pydub = "^0.25.0"
sounddevice = "^0.5.3"
soundfile = "^0.13.1"
readchar = "^4.2.1"
num2words = "^0.5.14"
streamlit = "^1.53.0"
pedalboard = "^0.9.0"  
pyloudnorm = "^0.1.1"  
streamlit-aggrid = "^0.3.4"
streamlit-searchbox = "^0.1.13"
kaleido = "^1.2.0"
plotly = "^6.5.2"
streamlit-plotly-events = "^0.0.6"
altair = "^6.0.0"


[tool.poetry.scripts]
birdnet-walker = "birdnet_walker.main:main"
birdnet-play = "birdnet_play.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"